--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/validator": "~2.3",
+        "symfony/validator": "^2.3 || ^3.0",
         "jms/serializer": "~1.0",
         "phpdocumentor/reflection-docblock": "~2.0"
     },
