--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.3.3",
         "symfony/validator": "^2.3 || ^3.0",
         "jms/serializer": "~1.0",
-        "phpdocumentor/reflection-docblock": "~2.0"
+        "phpdocumentor/reflection-docblock": "^2.0 || ^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*"
